Fixed functional tests